# review

./: .gitignore  CITATION.cff  CITATIONS.md  CONTRIBUTING.md  README.md  setup.py
dataset/: README.md
dataset/test_lfr/: LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i1.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i10.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i2.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i3.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i4.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i5.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i6.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i7.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i8.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.2_t21.0_minc128_maxc640_S0_i9.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.6_t21.0_minc128_maxc640_S0_i1.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.6_t21.0_minc128_maxc640_S0_i10.gt.xz  LFRp1_N16384_k6.0_maxk128_mu0.1_t12.6_t21.0_minc128_maxc640_S0_i2.gt.xz  (+137 more)
dataset/test_review/: advogato.gt.xz  (+63 more)
network_dismantling/: __init__.py  _setup_hook.py  _sorters.py  converter.py  dismantler.py  plot.py  table_output.py  table_output_lfr.py  table_output_synth.py
network_dismantling/FINDER_ND/: .gitignore  CITATION.text  CMakeLists.txt  FINDER.c  FINDER.pyx  LICENSE  graph.pyx  mvc_env.pyx  nstep_replay_mem.pyx  nstep_replay_mem_prioritized.pyx  python_interface.py  setup.py
(+209 files in other folders)
